tests/errors/other/test_tc_other_04_do_while_cond_type.pc
#import std.io;
int main() {
    mut int i = 0;
    do {
        i += 1;
    } while (42);
    return 0;
}
